syntax = "proto3";

package config;

message SetReq {
  string app_name = 1;
  string user_id = 2;
  string api = 3;
}

message SetResp {
  bool is_ok = 1;
  int32 count = 2;
}

message GetReq {
  string app_name = 1;
  string user_id = 2;
  string api = 3;
}

message GetResp {
  bool is_ok = 1;
  int32 count = 2;
}